# chimerax-alphafold-mcp

./: .gitignore  LICENSE  README.md  mcp_direct_chimera.py  pyproject.toml
chimerax_mcp/: __init__.py  client.py  server.py
