[project]
name = "chimerax-alphafold-mcp"
version = "0.1.0"
description = "ChimeraX AlphaFold MCP server for structural biology and protein analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mushtaq" }]
keywords = ["mcp", "chimerax", "alphafold", "structural-biology", "protein-analysis"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
chimerax-mcp = "chimerax_mcp.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chimerax_mcp"]

[tool.pyright]
include = ["chimerax_mcp"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.379", "pytest>=8.3.3", "ruff>=0.6.9"]